syntax = "proto3";

package container;

option java_multiple_files = true;
option java_package = "org.example.rpc.container";
option java_outer_classname = "ContainerProto";
option objc_class_prefix = "HLW";
service Container {
  rpc Invoke(InvokeRequest) returns (InvokeResponse) {}
  rpc SetEnvs(SetEnvsRequest) returns (SetEnvsResponse) {}
  rpc LoadCode(LoadCodeRequest) returns (LoadCodeResponse) {}
  rpc Stop(StopRequest) returns (StopResponse) {}
}

message InvokeRequest {
  string funcName = 1;
  bytes payload = 2;
}

message InvokeResponse {
  enum Code {
    OK = 0;
    NOT_READY = 1;
    FUNC_MISMATCH = 2;
    RUNTIME_ERROR = 3;
  }
  Code code = 1;
  bytes output = 2;
}

message SetEnvsRequest {
  repeated string env = 1;
}

message SetEnvsResponse {
  enum Code {
    OK = 0;
    INVALID_ENV = 1;
  }
  Code code = 1;
}

message LoadCodeRequest {
  string funcName = 1;
  string url = 2;
}

message LoadCodeResponse {
  enum Code {
    OK = 0;
    ERR = 1;
  }
  Code code = 1;
}

message StopRequest {
}

message StopResponse {
  enum Code {
    OK = 0;
  }
  Code code = 1;
}